issue#1 Tests refactoring